Lesson-05/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: postgresql
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:10.13
        ports:
         - protocol: TCP
           containerPort: 5432
        volumeMounts:
          - name: secret
            mountPath: /secret
            readOnly: true
          - name: postgre-pgdata
            mountPath: /mnt/data
      volumes:
        - name: secret
          secret:
            secretName: redmine-user-pass
            items:
              - key: db_password
                path: password
        - name: postgre-pgdata
          persistentVolumeClaim:
            claimName: postgre-pgdata
