Lesson-05/postgresql-redmine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  namespace: postgresql
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      run: redmine
  template:
    metadata:
      labels:
        run: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        ports:
         - protocol: TCP
           containerPort: 3000
