Lesson-05/postgresql-redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: postgresql
  labels:
    run: redmine
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    run: redmine
