Lesson-05/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgresql
  labels:
    run: postgresql
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    run: postgresql
