Lesson-05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redmine-wildcard
  namespace: postgresql
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /redmine
        backend:
          service:
            name: redmine
            port:
              number: 3000
  ingressClassName: nginx
